@@ -23,6 +23,8 @@ static void Mod_Print (void);
 
 static qmodel_t *Mod_LoadModel (qmodel_t *mod, qboolean crash);
 
+static cvar_t	external_ents = {"external_ents", "1", CVAR_ARCHIVE};
+
 static byte	mod_novis[MAX_MAP_LEAFS/8];
 
 // 650 should be enough with model handle recycling, but.. (Pa3PyX)
@@ -42,6 +44,7 @@ Mod_Init
 */
 void Mod_Init (void)
 {
+	Cvar_RegisterVariable (&external_ents);
 	Cmd_AddCommand ("mcache", Mod_Print);
 
 	memset (mod_novis, 0xff, sizeof(mod_novis));
@@ -805,6 +808,9 @@ static void Mod_LoadEntities (lump_t *l)
 	int		mark;
 	unsigned int	path_id;
 
+	if (! external_ents.integer)
+		goto _load_embedded;
+
 	strcpy(entfilename, loadmodel->name);
 	COM_StripExtension(entfilename, entfilename, sizeof(entfilename));
 	strcat(entfilename, ".ent");
@@ -828,6 +834,7 @@ static void Mod_LoadEntities (lump_t *l)
 		}
 	}
 
+_load_embedded:
 	if (!l->filelen)
 	{
 		loadmodel->entities = NULL;
